# auction_platform

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.local  README.md  Taskfile.yml  alembic.ini  docker-compose.yml  main_api.py  pyproject.toml  pytest.ini  seed_database.py  seed_utility.py  settings.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2025_11_27_14-1b3c347810ce_create_users_table.py  2025_11_27_14-72df216017d2_create_auction_table.py  2025_11_27_14-7962ef2c6d23_create_vehicle_models_table.py  2025_11_27_14-ae73f9c7261b_create_vehicle_manufacturers_table.py  2025_11_27_14-fea1a79a52f3_create_auction_vehicles_table.py
contracts/: __init__.py  auction_vehicles.py  auctions.py  base.py  users.py  vehicle_manufacturers.py
controllers/: __init__.py  health_controller.py
controllers/v1/: __init__.py  auction_vehicles_controller.py  auctions_controller.py  users_controller.py  (+1 more)
core/: __init__.py  config.py  dependency_injection.py  logging.py
database/: database.py  init_database.py  schema_base.py
exceptions/: __init__.py  base.py  types.py
mappers/: __init__.py  auction_mapper.py  auction_vehicle_mapper.py  user_mapper.py  vehicle_manufacturer_mapper.py
middlewares/: __init__.py  exception_handling.py  request_logging.py  validation_handling.py
repositories/: __init__.py  auction_vehicles_repository.py  auctions_repository.py  base_repository.py  users_repository.py  vehicle_manufacturers_repository.py  vehicle_models_repository.py
services/: __init__.py  auction_vehicles_service.py  auctions_service.py  users_service.py  vehicle_manufacturers_service.py
tests/: __init__.py  conftest.py  test_settings.py
(+26 files in other folders)
